--- a/src/components/Marketplace/Chains/Chains.module.css
+++ b/src/components/Marketplace/Chains/Chains.module.css
@@ -46,7 +46,7 @@
 }
 
 .card:hover {
-  box-shadow: var(--shadow-light-8);
+  box-shadow: var(--shadow-dark);
 }
 
 .card.inActive:hover .soon {
