--- a/src/components/Marketplace/New-Listing/NewListing.module.css
+++ b/src/components/Marketplace/New-Listing/NewListing.module.css
@@ -49,7 +49,7 @@
 
 @media screen and (max-width: 900px) {
   .heading h3 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
   }
 }
 
@@ -72,5 +72,9 @@
 @media screen and (max-width: 480px) {
   .container {
     padding: 0;
+  }
+
+  .heading {
+    flex-direction: column;
   }
 }
