--- a/src/components/Mint/collection-single/collection-single.module.css
+++ b/src/components/Mint/collection-single/collection-single.module.css
@@ -59,7 +59,7 @@
 }
 
 .mintSwitch > button:hover {
-  box-shadow: var(--shadow-light-8);
+  box-shadow: var(--shadow-dark);
   background: var(--main-bg);
   color: var(--main-700);
 }
@@ -91,12 +91,12 @@
   padding: 1em 2em;
   border-radius: 1em;
   border: 2px solid transparent;
-  box-shadow: var(--shadow-light-5);
+  box-shadow: var(--shadow-light);
   transition: all 300ms;
 }
 
 .card:hover {
-  box-shadow: var(--shadow-light-8);
+  box-shadow: var(--shadow-dark);
 }
 
 .card.collection {
