--- a/src/components/preview/collection-preview.module.css
+++ b/src/components/preview/collection-preview.module.css
@@ -21,7 +21,7 @@
   transition: all 300ms;
   border: none;
   background: var(--main-bg);
-  box-shadow: var(--shadow-light-5);
+  box-shadow: var(--shadow-light);
 }
 
 .container button * {
