--- a/src/components/use-guide/createUseGuide.module.css
+++ b/src/components/use-guide/createUseGuide.module.css
@@ -38,7 +38,7 @@
   cursor: pointer;
   background: var(--main-100);
   transition: all 300ms;
-  box-shadow: var(--shadow-light-5);
+  box-shadow: var(--shadow-light);
 }
 
 .close {
@@ -46,7 +46,7 @@
 }
 
 .closeIconContainer:hover {
-  box-shadow: var(--shadow-light-8);
+  box-shadow: var(--shadow-dark);
 }
 
 .content {
