--- a/src/components/wallet-popup/walletPopup.module.css
+++ b/src/components/wallet-popup/walletPopup.module.css
@@ -175,7 +175,7 @@
   width: 100%;
   padding: 1em 0;
   border: 1px solid transparent;
-  box-shadow: var(--shadow-light-5);
+  box-shadow: var(--shadow-light);
   display: flex;
   align-items: center;
   justify-content: stretch;
@@ -188,7 +188,7 @@
 }
 
 .connectionMethod:hover {
-  box-shadow: var(--shadow-light-8);
+  box-shadow: var(--shadow-dark);
   border: 1px solid var(--text-light-500);
 }
 
