--- a/src/pages/dashboard/dashboard.module.css
+++ b/src/pages/dashboard/dashboard.module.css
@@ -19,7 +19,7 @@
   gap: 2em;
   padding: 2em;
   background: var(--main-bg);
-  /* box-shadow: var(--shadow-light-5);
+  /* box-shadow: var(--shadow-light);
   overflow: hidden;
   border-radius: 1em;
   margin-bottom: 2em;
@@ -132,14 +132,14 @@
 }
 
 .editProfile:hover {
-  box-shadow: var(--shadow-light-8);
+  box-shadow: var(--shadow-dark);
 }
 
 .main {
   padding: 2em;
   border-radius: 1em;
   background: var(--main-bg);
-  box-shadow: var(--shadow-light-5);
+  box-shadow: var(--shadow-light);
 }
 .username {
   font-size: 2rem;
